// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyticsPage renderTabContent should render Billing Tab 1`] = `
<div>
  <CostExplorerTab
    apps={
      Array [
        Object {
          "authFlow": "clientCredentials",
          "desktopIntegrationTypeIds": Array [],
          "developerId": "MOCK_DEVELOPER_ID",
          "homePage": "https://foo.bar",
          "id": "MOCK_APP_ID",
          "isFree": true,
          "isListed": true,
          "launchUri": "https://foo.bar",
          "limitToClientIds": Array [],
          "products": Array [
            "agencyCloud",
          ],
          "summary": "Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar",
        },
        Object {
          "authFlow": "authorisationCode",
          "desktopIntegrationTypeIds": Array [],
          "developerId": "MOCK_DEVELOPER_ID",
          "homePage": "https://foo.bar",
          "id": "MOCK_OTHER_APP_ID",
          "isFree": true,
          "isListed": true,
          "launchUri": "https://foo.bar",
          "limitToClientIds": Array [],
          "products": Array [
            "agencyCloud",
          ],
          "summary": "Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar",
        },
      ]
    }
  />
</div>
`;

exports[`AnalyticsPage renderTabContent should render Detailed Tab 1`] = `
<div>
  <DetailedTab
    apps={
      Array [
        Object {
          "authFlow": "clientCredentials",
          "desktopIntegrationTypeIds": Array [],
          "developerId": "MOCK_DEVELOPER_ID",
          "homePage": "https://foo.bar",
          "id": "MOCK_APP_ID",
          "isFree": true,
          "isListed": true,
          "launchUri": "https://foo.bar",
          "limitToClientIds": Array [],
          "products": Array [
            "agencyCloud",
          ],
          "summary": "Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar",
        },
        Object {
          "authFlow": "authorisationCode",
          "desktopIntegrationTypeIds": Array [],
          "developerId": "MOCK_DEVELOPER_ID",
          "homePage": "https://foo.bar",
          "id": "MOCK_OTHER_APP_ID",
          "isFree": true,
          "isListed": true,
          "launchUri": "https://foo.bar",
          "limitToClientIds": Array [],
          "products": Array [
            "agencyCloud",
          ],
          "summary": "Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar",
        },
      ]
    }
  />
</div>
`;

exports[`AnalyticsPage should match a snapshot 1`] = `
<Connect(ErrorBoundary)>
  <H3>
    Dashboard
  </H3>
  <Tabs
    tabConfigs={
      Array [
        Object {
          "active": true,
          "displayText": "DETAILED",
          "onTabClick": [Function],
          "tabIdentifier": "detailed",
        },
        Object {
          "active": false,
          "displayText": "Cost Explorer",
          "onTabClick": [Function],
          "tabIdentifier": "costexplorer",
        },
      ]
    }
  />
</Connect(ErrorBoundary)>
`;
